--- a/website/pages/style.css
+++ b/website/pages/style.css
@@ -2,19 +2,71 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Buttons */
-.login-btn,
-.signup-btn {
-    height: 30px;
-    font-size: 16px;
-    cursor: pointer;
+#title{
+    font-size: 50px;
+    font-style: italic;
     position: relative;
     justify-content: center;
     display: flex;
+    margin-top: 8px;
+    background-color: blanchedalmond;
+    height: 80px;
+    }
+    #s1{
+        display: flex;
+        position: relative;
+        justify-content: center;
+        bottom: 20px;
+        font-size: 35px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    }
+    #s2{
+        display: flex;
+        position: relative;
+        justify-content: center;
+        top: 20px;
+        font-size: 25px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+
+#q1{
+    display: flex;
+    position: relative;
+    left: 470px;
+    top: 350px;
+    background-color: blanchedalmond;
+    width: 125px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
+#q2{
+    display: flex;
+    position: relative;
+    left: 910px;
+    top: 330px;
+    background-color: blanchedalmond;
+    width: 250px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
-/* The Popup Background */
+}
+#loginbutton{
+    position: relative;
+    display: flex;
+    left: 500px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    top: 450px;
+}
+#signupbutton {
+    height: 30px;
+    font-size: 18px;
+    cursor: pointer;
+    position: relative;
+    left: 1000px;
+    display: flex;
+    top: 420px;
+}
+
 .popup-overlay {
     display: none;
     position: fixed;
