--- a/website/pages/loahshana.css
+++ b/website/pages/loahshana.css
@@ -13,7 +13,7 @@ h1 {
     text-align: center;
     font-size: 2.8rem;
     margin-bottom: 2rem;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .controls {
@@ -50,7 +50,7 @@ h1 {
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
 
 textarea {
@@ -77,5 +77,18 @@ textarea:focus {
     font-size: 1.3rem;
     margin-top: 2.5rem;
     color: #f0f0f0;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    color: black;
+}
+
+#logoutbutton {
+    position: absolute;
+    background: none;
+    border: none;
+    color: black;
+    font-size: 26px;
+    position: fixed;
+    left: 3%;
+    top: 5%;
+    cursor: pointer;
 }
