--- a/website/pages/index.css
+++ b/website/pages/index.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -98,22 +97,35 @@ button:hover {
   font-size: 1rem;
 }
 
-.popup-box input::placeholder {
-  color: #bbb;
-}
-
-/* Descriptive Text */
-#q1,
-#q2 {
-  font-size: 1rem;
-  margin-top: 20px;
-  color: #ecf0f1;
-}
-
 #s1 {
   font-size: 1.3rem;
   font-weight: 500;
   margin-top: 40px;
   color: #f1c40f;
   text-shadow: 0 0 5px #f39c12;
+}
+
+#qmark {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 28px;
+  background: #ffffff;
+  border: 2px solid #007bff;
+  color: #007bff;
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 2000;
+  transition: all 0.2s ease;
+}
+
+#qmark:hover {
+  background-color: #007bff;
+  color: white;
 }
